# roblox-stuff

./: .dockerignore  .gitignore  CMakeLists.txt  LURAPH_DEOBFUSCATOR_HANDOFF.md  README.md  auto-deobfuscator-linux-x64.spec
.github/workflows/: build.yml
data/baseline/: runtime_v2_baseline.json
keys/: alex_owner.public
luraph_c#/: .gitignore  Directory.Build.props  Luraph.sln  README.md  TO_WORK_ON.md
luraph_c#/tools/: auto-sync.sh
runtime/: CMakeLists.txt  README.md  demo.cpp  guard.cpp  guard.h
src/: alexfuscator.cpp  runtime_v2.cpp
src 2/: alexfuscator.cpp  main.cpp  runtime_v2.hpp
src 2/alexfuscator/: alex_language.cpp
src 2/runtime/: curl_http_transport.cpp  curl_http_transport.hpp  executor_compat.cpp  register_overflow.cpp  register_overflow.hpp  release729_datatypes.hpp  release_manifest.cpp  release_manifest.hpp  roblox_debug.cpp  roblox_debug.hpp  roblox_utf8.hpp  runtime_context.cpp  runtime_value.hpp  signal.cpp
src/alexfuscator/: alex_language.cpp  alex_language.hpp
src/deobfuscator/: main.cpp
src/runtime/: clock.cpp  clock.hpp  executor_compat.hpp  luau_runtime_bridge.cpp  luau_runtime_bridge.hpp  memory_filesystem.cpp  memory_filesystem.hpp  module_registry.cpp  module_registry.hpp  network_broker.cpp  network_broker.hpp  reflection.hpp  release729_datatypes.cpp  roblox_environment_guard.cpp  (+8 more)
tests/: CMakeLists.txt  alex1_edges.alex  alex1_edges.luau  alex1_semantics.alex  alex1_semantics.luau  alexfuscator_smoke.luau  alexfuscator_vm95_mini.luau  blackbox_release729_hardening.py  bytecode_blob_recovery_smoke.lua  cli_binary_return_v3.luau  cli_error_classification_v3.luau  cli_execution_mode_v3.luau  cli_memory_limit_v3.luau  cli_module_codegen_parity_v3.luau  cli_output_limit_v3.luau  cli_parity_v3.luau  cli_report_cycles_v3.luau  datatypes_v2.luau  exact_source_recovery_smoke.lua  executor_memory_filesystem_v3.luau  executor_mutable_namespaces_v3.luau  function_dump_recovery_smoke.lua  instance_constructor_native_v3.luau  instance_reflection_v3.luau  instance_retention_v3.luau  luraph_environment_order_probe.luau  luraph_host_probe.luau  luraph_path2d_length_fidelity.luau  luraph_path2d_oracle_probe.luau  module_concurrency_v2.luau  module_sidecar_v2.luau  native_environment_trace.luau  native_random_v3.luau  native_values_v3.luau  opiumware_executor_contract.luau  packed_blob_recovery_smoke.lua  refresh_release_729_oracle.py  release729_coroutine_close_scheduler.luau  release729_datatype_catalog_probe.luau  release729_datatypes_native.luau  (+62 more)
tests/deobfuscation_corpus/source/: 001_arithmetic.luau  002_string_transform.luau  003_array_reduce.luau  004_dictionary.luau  005_numeric_loop.luau  006_while_loop.luau  007_repeat_loop.luau  008_closure.luau  009_recursion.luau  010_varargs.luau  011_multi_return.luau  012_table_sort.luau  013_metatable.luau  014_protected_call.luau  015_coroutine.luau  016_iterator.luau  017_if_expression.luau  018_interpolation.luau  019_bit32.luau  020_state_machine.luau  021_arithmetic.luau  022_string_transform.luau  023_array_reduce.luau  024_dictionary.luau  025_numeric_loop.luau  026_while_loop.luau  027_repeat_loop.luau  028_closure.luau  029_recursion.luau  030_varargs.luau  031_multi_return.luau  032_table_sort.luau  033_metatable.luau  034_protected_call.luau  035_coroutine.luau  036_iterator.luau  037_if_expression.luau  038_interpolation.luau  039_bit32.luau  040_state_machine.luau  (+61 more)
tests/deobfuscation_corpus/wearedevs_obfuscated/: 001_arithmetic.luau  002_string_transform.luau  003_array_reduce.luau  004_dictionary.luau  005_numeric_loop.luau  006_while_loop.luau  007_repeat_loop.luau  008_closure.luau  009_recursion.luau  010_varargs.luau  011_multi_return.luau  012_table_sort.luau  013_metatable.luau  014_protected_call.luau  015_coroutine.luau  016_iterator.luau  019_bit32.luau  020_state_machine.luau  021_arithmetic.luau  022_string_transform.luau  023_array_reduce.luau  024_dictionary.luau  025_numeric_loop.luau  026_while_loop.luau  027_repeat_loop.luau  028_closure.luau  029_recursion.luau  030_varargs.luau  031_multi_return.luau  032_table_sort.luau  033_metatable.luau  034_protected_call.luau  035_coroutine.luau  036_iterator.luau  039_bit32.luau  040_state_machine.luau  041_arithmetic.luau  042_string_transform.luau  043_array_reduce.luau  044_dictionary.luau  (+51 more)
tests/deobfuscator/luraph/: call_semantics_test.cpp  emit_test.cpp  index_read_semantics_test.cpp  range_clear_semantics_test.cpp  scan_test.cpp  vm_test.cpp
tests/fixtures/: executor_filesystem_v2.json  module_concurrency_v2.json  module_sidecar_v2.json  replicated_storage_scenario.json  runtime_v2_scenario.json  runtime_v2_scenario_v2.json  scenario_v2_lifecycle.json  wearedevs_adjacent_captured_reload.luau  wearedevs_adjacent_temporary_inlining.luau  wearedevs_empty_register_capture.luau  wearedevs_partial_register_scalarization.luau  wyn_payload_world.json
tests/fixtures/luraph_compat/: forced_luraph_loadstring.luau  ordinary_roblox_client.luau
tests/fixtures/luraph_luaauth/: lph_dollar_generation.json
tests/helpers/: flow_harness.cpp
tests/roblox_oracle/fixtures/release-729/: core.json
tests/roblox_oracle/probes/: core.luau  destroyed_instance_parent.luau  enum_item_identity.luau  gui_absolute_geometry.luau  random_fidelity.luau  starter_player_hierarchy.luau  wait_for_child_destroyed.luau
tests/runtime/: roblox_environment_guard_test.cpp  runtime_foundations_test.cpp
tools/: alexfuscator_static_quality.py  alexfuscator_web.py  anti_tamper_trace_report.py  auto_deobfuscator.py  balenci_quality_gate.py  build_moonveil_exact_report.py  deobfuscate_wearedevs_tiny.py  devirtualize_moonveil_vm.py  fetch_wearedevs_obfuscation_corpus.mjs  generate_api_summary.py  generate_luau_deobfuscation_corpus.mjs  iphone_os_app_check.py  lift_old_luraph_vm.py  luraph_ir_summary.py  luraph_trace_campaign.py  luraph_trace_probe.py  reconstruct_moonveil_ssa.py  recover_wearedevs_tiny.py  render_moonveil_executed_path.py  semantic_lift_moonveil_vm.py  trace_wearedevs_runtime.py  update_roblox_oracle.py  wearedevs_deobfuscator.py
(+214 files in other folders)
